# time-management

./: .gitignore  README.md  docker-compose.yml
backend/: .env.template  .env.test  Dockerfile  create_certs.py  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_28_1930-a57fd1575bd3_.py  2025_07_28_2041-31f99f2e9d0a_.py  2025_07_28_2141-77f46764f899_.py  2025_07_28_2144-130386fd892e_.py  2025_07_28_2159-78101cf52937_.py  2025_07_28_2206-56ebc448ca68_.py  2025_07_28_2214-a4f3009e37cd_.py  2025_07_28_2220-e7e1ceccd5bd_.py  2025_07_29_1319-960dad46e266_.py  2025_07_29_1331-42c1f42e1d29_.py  2025_07_29_1425-6a62ea39671f_.py  2025_07_29_2019-0e04d804c3c4_.py  2025_07_29_2036-7a2b34b923fc_.py  2025_07_30_1210-19af37632982_.py  2025_07_30_1407-61d84ea40aea_.py  2025_08_04_1606-493dc00199cb_.py  2025_08_06_1216-4c3c757c99d9_.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  affairs.py  (+3 more)
backend/core/: config.py
backend/nginx/: nginx.conf
backend/services/: auth.py  common.py  habits.py  tasks.py  users.py
backend/static/: style.css
backend/templates/: base.html  habits-create.html  habits-edit.html  habits-list.html  habits-stats.html  index.html  login.html  tasks-create.html  tasks-edit.html  tasks-list.html  tasks-stats.html
backend/tests/: conftest.py  test_habits.py  test_tasks.py  test_users.py
backend/views/: __init__.py  auth.py  habits.py  index.py  tasks.py
bot/: .env.template  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
bot/alembic/: env.py
bot/core/: bot.py  commands.py  config.py  enums.py  exc.py
bot/middlewares/: db.py  http.py  i18n.py
bot/routers/: __init__.py  cancel.py  common_handlers.py  start.py
(+125 files in other folders)
